--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-title: Your awesome title
-author: GitHub User
+title: My First Blog and template!
+author: Jan Sunshine53
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+"Welcome to the Sunshine53's homepage!"
+Feel free to bookmark this page to keep an eye on my project updates.
+I will be adding new information weekly.
+Some Favorite Links
+https://www.w3.org/2002/03/tutorials.html#w3c_all
 # social links
 twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username:  sunshine53
 
 show_excerpts: true # set to false to remove excerpts on the homepage
