--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ twitter_username: your-twitter-handle
 github_username:  sunshine53
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+theme: jekyll-theme-leap-day
