--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
 "Welcome to the Sunshine53's homepage!"
 Feel free to bookmark this page to keep an eye on my project updates.
-I will be adding new information weekly.
+I will be updating and adding new information weekly.
 Some Favorite Links
 https://www.w3.org/2002/03/tutorials.html#w3c_all
 # social links
